[feat] : 메인페이지 TODO / DONE 관련 반응형 완료 / UI 완료

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .common-border {
+    @apply border-[1px] border-slate-900 shadow-[2px_2px_0px_0px_rgba(15,23,42,1)];
+  }
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
