--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,16 @@ body {
     text-wrap: balance;
   }
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  border-radius: 6px;
+  background: none; /* 스크롤바의 배경 색상 */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  height: 10%; /* 스크롤바의 길이 */
+  background: #fde68a; /* 스크롤바의 색상 */
+  border-radius: 10px;
+}
