--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css");
+
 @layer base {
   /* 추가적인 CSS 초기화 */
   *,
@@ -18,8 +20,7 @@
   }
 
   body {
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.5;
+    font-family: "NanumSquare", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
